# DaytumStats

./: .gitignore  DaytumStats.cabal  LICENSE  csv.hs  daytum.hs  main.hs  stats.hs  thomaschrstnsn.csv
src/: Main.hs  OecoMain.hs
src/Data/: Csv.hs
src/Data/List/: Statistics.hs
src/Daytum/: Daytum.hs  Filter.hs  Stats.hs
